--- a/style.css
+++ b/style.css
@@ -44,3 +44,19 @@
   a:hover {
     color: darkorange;
   }
+
+  /*Specificity is the order by which the browser decides which CSS styles will be displayed.
+  A best practice in CSS is to style elements while using the lowest degree of specificity so that if an element needs a new style, it is easy to override.
+  IDs are the most specific selector in CSS, followed by classes, and finally, type.*/
+
+  h5 {
+    color: yellow;
+  }
+   
+  .author-class {
+    color: pink;
+  }
+   
+  #author-id {
+    color: cornflowerblue;
+  }
