--- a/style.css
+++ b/style.css
@@ -1,69 +1,118 @@
-/* the universal selector selects all elements of any type*/
+/* THE UNIVERSAL SELECTOR selects all elements of any type*/
 * {
     border: 1px solid red;
   }
-  
-  /* the type selector selects all elements of a given type, element type p */
-  p {
-    color: green;
-  }
-  
-   /* the type selector selects all elements of a given type, element type h1 */
-  h1 {
-    color: maroon;
-  }
-  
-  /* class */
-  .title {
-    color: teal;
-  }
-  
-  .uppercase {
-    text-transform: uppercase;
-  }
-  
-  /* ID */
-  #article-title {
-    font-family: cursive;
-  }
-  
-  /*  attribute selector to select the <a> element with an href attribute value containing ‘florence’ */
-  a[href*='florence'] {
-    color: lightgreen;
-  }
-  
-  a[href*='beijing'] {
-    color: lightblue;
-  }
-  
-  a[href*='seoul'] {
-    color: lightpink;
-  }
 
-  /* pseudo-class */
-  a:hover {
-    color: darkorange;
-  }
+  
+/* THE TYPE SELECTOR selects all elements of a given type, e.g. element type p */
+p {
+  color: green;
+}
+  
 
-  /*Specificity is the order by which the browser decides which CSS styles will be displayed.
-  A best practice in CSS is to style elements while using the lowest degree of specificity so that if an element needs a new style, it is easy to override.
-  IDs are the most specific selector in CSS, followed by classes, and finally, type.*/
-
-  h5 {
-    color: yellow;
+h1 {
+  color: maroon;
   }
+  
+/* CLASS
+Classes can be reusable, while IDs can only be used once.
+*/
+.title {
+  color: teal;
+}
+  
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+
+/* ID
+IDs are more specific than classes, and classes are more specific than type.
+That means IDs will override any styles from a class, and classes will override any styles from a type selector.
+*/
+#article-title {
+  font-family: cursive;
+}
+
+
+/* THE ATTRIBUTE SELECTOR to select the <a> element with an href attribute value containing ‘florence’ */
+a[href*='florence'] {
+  color: lightgreen;
+}
+
+
+a[href*='beijing'] {
+  color: lightblue;
+}
+
+
+a[href*='seoul'] {
+  color: lightpink;
+}
+
+
+/* PSEUDO-CLASS
+An element can have different states using the pseudo-class selector.
+*/
+a:hover {
+  color: darkorange;
+}
+
+
+/*SPECIFICITY is the order by which the browser decides which CSS styles will be displayed.
+A best practice in CSS is to style elements while using the lowest degree of specificity,
+so that if an element needs a new style, it is easy to override.
+IDs are the most specific selector in CSS, followed by classes, and finally, type.*/
+h5 {
+  color: yellow;
+}
    
-  .author-class {
-    color: pink;
-  }
+.author-class {
+  color: pink;
+}
    
-  #author-id {
-    color: cornflowerblue;
-  }
+#author-id {
+  color: cornflowerblue;
+}
 
-  /* Chaining, when writing CSS rules, it’s possible to require an HTML element to have two or more CSS selectors at the same time.
-  This is done by combining multiple selectors, also known as chaining.
-  The code below will change the font of the h2 elements that also have the class destination. The last <h2> element (“More Destinations”) will remain unchanged. */
-  h2.destination {
-    font-family: Tahoma;
-  }
+
+/* CHAINING, when an HTML element has two or more CSS selectors at the same time, multiple selectors
+e.g. <h2 class='destination heading-background'>2. Beijing, China</h2>
+In index.html there are h2 elements that also have the class destination.
+*/
+h2.destination {
+  font-family: Tahoma;
+}
+
+
+/* DESCENDANT COMBINATORS, elements that are nested within other HTML elements are known as descendants.
+In index.html there's a div with a class called description, and nested within this div is an h5.
+e.g. <div class='description'>bla bla</a>.
+        <h5>Top Attractions</h5>
+        <ul>
+          <li>Museums</li>
+          <li>Bike tours</li>
+          <li>Historical Monuments</li>
+        </ul>
+       </div>
+*/
+.description h5 {
+  color: blueviolet;
+}
+
+
+/* Select the <h4> elements nested in the <li> elements,
+<li><h4 class='destination'>Jackson Hole, Wyoming</h4></li> */
+li h4 {
+  color: gold;
+}
+
+
+/* MULTIPLE SELECTORS,
+Multiple unrelated selectors can receive the same styles by separating the selector names with commas.
+*/
+h5,
+li {
+  font-family: monospace;
+}
