--- a/The Box Model/style.css
+++ b/The Box Model/style.css
@@ -1,112 +1,141 @@
 body {
-    background-color: white;
-    font-family: 'Raleway', sans-serif;
-  }
-  
-  .navigation ul {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-  
-  .navigation li {
-    font-weight: 100;
-    letter-spacing: 2px;
-    padding: 20px;
-  }
-  
-  .navigation  li.logo {
-    color: black;
-    font-size: 18px;
-    font-weight: 700;
-    letter-spacing: 4px;
-  }
-  
-  #banner {
-    background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_tahoe.jpeg");
-    background-size: cover;
-    background-position: bottom center;
-    height: 700px;
-    width: 100%;
-  }
-  
-  #banner .content h1 {
-    border: 3px solid white;
-    position: relative;
-    top: 50px;
-    width: 400px;
-    margin: 0 auto;
-  }
-  
-  #main {
-    padding: 40px;
-    text-align: center;
-    width: 400px;
-  }
-  
-  h1 {
-    color: white;
-    font-size: 42px;
-    font-weight: 600;
-    text-align: center;
-  }
-  
-  h2 {
-    border: 1px dotted red;
-    color: red;
-    font-size: 14px;
-    line-height: 48px;
-    padding: 20px 30px;
-    text-align: center;
-  }
-  
-  h3 {
-    color: red;
-    font-size: 26px;
-    font-weight: 700;
-    padding: 20px 10px;
-  }
-  
-  p {
-    color: grey;
-    font-size: 16px;
-    line-height: 48px;
-    margin-top: 60px;
-    padding: 10px 20px;
-  }
-  
-  .pull-quote {
-  }
-  
-  .byline {
-    border-bottom: 1px solid LightGrey;
-    border-top: 1px solid LightGrey;
-    color: DarkGrey;
-    font-size: 14px;
-    font-weight: 200;
-  }
-  
-  .share {
-    border: 1px solid LightGrey;
-    padding: 40px 0px;
-    position: relative;
-    text-align: center;
-    width: 100%;
-  }
-  
-  .share a {
-    background: red;
-    border: 1px solid red;
-    border-radius: 3px;
-    color: white;
-    display: inline-block;
-    margin: 10px;
-    padding: 14px;
-    text-decoration: none;
-  }
-  
-  .share a:hover {
-    background: white;
-    border: 1px solid red;
-    color: red;
-  }
+  background-color: white;
+  font-family: "Raleway", sans-serif;
+}
+
+.navigation ul {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.navigation li {
+  font-weight: 100;
+  letter-spacing: 2px;
+  padding: 20px;
+}
+
+.navigation li.logo {
+  color: black;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 4px;
+}
+
+#banner {
+  background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_tahoe.jpeg");
+  background-size: cover;
+  background-position: bottom center;
+  height: 700px;
+  width: 100%;
+}
+
+#banner .content h1 {
+  border: 3px solid white;
+  position: relative;
+  top: 50px;
+  width: 400px;
+  margin: 0 auto;
+}
+
+#main {
+  padding: 40px;
+  text-align: center;
+  width: 400px;
+  /* 
+  The OVERFLOW property controls what happens to content that spills,
+  or overflows, outside its box. The most commonly used values are: 
+  hidden, scroll and overflow.
+  */
+  height: 1000px;
+  overflow: scroll;
+}
+
+h1 {
+  color: white;
+  font-size: 42px;
+  font-weight: 600;
+  text-align: center;
+}
+
+h2 {
+  border: 1px dotted red;
+  color: red;
+  font-size: 14px;
+  line-height: 48px;
+  padding: 20px 30px;
+  text-align: center;
+  /*
+  first value: margin-top and margin-bottom (30px), 
+  second value: margin-left and margin-right values (20px)
+  */
+  margin: 30px 20px;
+}
+
+h3 {
+  color: red;
+  font-size: 26px;
+  font-weight: 700;
+  padding: 20px 10px;
+  /* 
+  first value: margin-top value (5px),
+  second value: margin-left and margin-right values (12px),
+  third value: margin-bottom value (4px).
+  margin: 5px 12px 4px; */
+}
+
+p {
+  color: grey;
+  font-size: 16px;
+  line-height: 48px;
+  margin-top: 60px;
+  padding: 10px 20px;
+  /* Minimum and Maximum Height and Width,
+  Because a web page can be viewed through displays of different screen size,
+  the content on the web page can suffer from those changes in size. 
+  To avoid this problem, CSS offers two properties 
+  that can limit how narrow or how wide an element’s box can be sized to: 
+  */
+  min-width: 200px;
+  max-width: 800px;
+  min-height: 200px;
+  max-height: 300px;
+}
+
+.pull-quote {
+  width: 350px;
+  margin: 0 auto;
+}
+
+.byline {
+  border-bottom: 1px solid LightGrey;
+  border-top: 1px solid LightGrey;
+  color: DarkGrey;
+  font-size: 14px;
+  font-weight: 200;
+}
+
+.share {
+  border: 1px solid LightGrey;
+  padding: 40px 0px;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+.share a {
+  background: red;
+  border: 1px solid red;
+  border-radius: 3px;
+  color: white;
+  display: inline-block;
+  margin: 10px;
+  padding: 14px;
+  text-decoration: none;
+}
+
+.share a:hover {
+  background: white;
+  border: 1px solid red;
+  color: red;
+}
