--- a/The Box Model/style.css
+++ b/The Box Model/style.css
@@ -1,7 +1,14 @@
 body {
   background-color: white;
   font-family: "Raleway", sans-serif;
+  /* RESETTING DEFAULTS
+  All major web browsers have a default they use in the absence of an external stylesheet.
+  These default stylesheets are known as user agent stylesheets.
+  */
+  margin: 0;
+  padding: 0;
 }
+
 
 .navigation ul {
   margin: 0;
@@ -9,11 +16,13 @@ body {
   text-align: center;
 }
 
+
 .navigation li {
   font-weight: 100;
   letter-spacing: 2px;
   padding: 20px;
 }
+
 
 .navigation li.logo {
   color: black;
@@ -21,6 +30,16 @@ body {
   font-weight: 700;
   letter-spacing: 4px;
 }
+
+
+/* VISIBILITY
+Elements can be hidden from view with the visibility property.
+The visibility property can be set to one of the following values:
+hidden, visible and collapse.
+*/
+.donate{
+  visibility: hidden;
+  }
 
 #banner {
   background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_tahoe.jpeg");
@@ -30,13 +49,27 @@ body {
   width: 100%;
 }
 
+
 #banner .content h1 {
-  border: 3px solid white;
+  /* BORDERS
+  A border is a line that surrounds an element,
+  it can be set with a specific width, style and color.
+  width: the thickness of a border e.g thing, medium or thick
+  style: the design of the border, e.g. none, dotted and solid
+  color: the color of the border.
+  */
+  border: 3px solid white;/* the border has a width of 3 pixels*/
   position: relative;
   top: 50px;
   width: 400px;
   margin: 0 auto;
+  /* BORDER-RADIUS
+  You can modify the corners of an element's border box
+  with the border-radius property.
+  */
+  border-radius: 15px;
 }
+
 
 #main {
   padding: 40px;
@@ -63,9 +96,15 @@ h2 {
   color: red;
   font-size: 14px;
   line-height: 48px;
+  /*PADDING
+  The space between the contents of a box and the borders of a box is known as padding.
+  Padding is like the space between a picture and the frame surrounding it.
+  In the example below the top and bottom of h2 elements are 20 pixels,
+  and the left and right padding of h2 elements are 30 pixels.
+  */
   padding: 20px 30px;
   text-align: center;
-  /*
+  /* MARGIN SHORTHAND
   first value: margin-top and margin-bottom (30px), 
   second value: margin-left and margin-right values (20px)
   */
@@ -77,7 +116,7 @@ h3 {
   font-size: 26px;
   font-weight: 700;
   padding: 20px 10px;
-  /* 
+  /* MARGIN SHORTHAND
   first value: margin-top value (5px),
   second value: margin-left and margin-right values (12px),
   third value: margin-bottom value (4px).
@@ -88,6 +127,10 @@ p {
   color: grey;
   font-size: 16px;
   line-height: 48px;
+  /* MARGIN
+  Margin refers to the space directly outside of the box.
+  The margin property is used to specify the size of this space.
+  */
   margin-top: 60px;
   padding: 10px 20px;
   /* Minimum and Maximum Height and Width,
@@ -103,7 +146,13 @@ p {
 }
 
 .pull-quote {
+  /*The div will center within a containing element that is greater than 350 pixels wide.*/
   width: 350px;
+  /* AUTO
+  The 0 sets the top and bottom margins to 0 pixels.
+  The auto value instructs the browser to adjust the left and right margins
+  until the element is centered within its containing element.
+  */
   margin: 0 auto;
 }
 
@@ -139,3 +188,30 @@ p {
   border: 1px solid red;
   color: red;
 }
+
+/*
+THE BOX MODEL
+Review
+In this lesson, we covered the four properties of the box model: height and width, padding, borders, and margins. Understanding the box model is an important step towards learning more advanced HTML and CSS topics. Let’s take a minute to review what you learned:
+
+The box model comprises a set of properties used to create space around and between HTML elements.
+The height and width of a content area can be set in pixels or percentages.
+Borders surround the content area and padding of an element. The color, style, and thickness of a border can be set with CSS properties.
+Padding is the space between the content area and the border. It can be set in pixels or percent.
+Margin is the amount of spacing outside of an element’s border.
+Horizontal margins add, so the total space between the borders of adjacent elements is equal to the sum of the right margin of one element and the left margin of the adjacent element.
+Vertical margins collapse, so the space between vertically adjacent elements is equal to the larger margin.
+margin: 0 auto horizontally centers an element inside of its parent content area, if it has a width.
+The overflow property can be set to display, hide, or scroll, and dictates how HTML will render content that overflows its parent’s content area.
+The visibility property can hide or show elements.
+
+Instructions
+Make some adjustments to the code in the code editor. See if you can improve the appearance of the page by changing the following properties:
+
+width
+height
+padding
+border
+margin
+overflow
+*/
