--- a/Colors/style.css
+++ b/Colors/style.css
@@ -165,8 +165,15 @@ a {
 
   Hue, Saturation, and Lightness
   Hue is the first number. It refers to an angle on a color wheel.
+  Red is 0 degrees, Green is 120 degrees, Blue is 240 degrees, and then back to Red at 360.
   Saturation refers to the intensity or purity of the color. 
   Lightness refers to how light or dark the color is.
   color: hsl(120, 60%, 70%);
+
+  Opacity and Alpha
+  Opacity is the amount of transparency. To use opacity in the HSL color scheme, use hsla instead of hsl,
+  and four values instead of three. For example:
+  color: hsla(34, 100%, 50%, 0.1);
+  The fourth value is the alpha. This last value is sometimes called opacity.
 
 */
