--- a/Typography/style.css
+++ b/Typography/style.css
@@ -130,3 +130,13 @@ html {
     font-style: italic;
   }
   
+
+/*
+NOTES
+Typography
+text-transform: uppercase;
+letter-spacing: 0.3em;
+word-spacing: 0.25em;
+line-height: 1.4;
+text-align: justify;
+*/
